# sports_betting_scraper

./: .env.example  .gitignore  Agregar.txt  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  lee.txt  pyproject.toml  requirements.txt  test_historical_download.py
.github/workflows/: ci.yml
data/historical/: Database - Odds - Europe Champions League - CS.csv  Database - Odds - Europe Champions League - LS.csv  Database - Scores - Europe Champions League - CS.csv  Database - Scores - Europe Champions League - LS.csv
data/ml_cache/: features_cache.pkl
docs/: architecture.md  runbook.md
infrastructure/docker/: Dockerfile.backend  Dockerfile.celery
infrastructure/nginx/: nginx.conf
models/: xgboost.json
scripts/: add_champions_league.py  add_unique_constraint.py  analyze_ev_bins.py  calibrate_model.py  check_db_count.py  check_db_schema.py  check_model_performance.py  check_odds_availability.py  detect_drift.py  download_all_historical_data.py  download_historical_data.py  evaluate_60k_model.py  examine_cl_files.py  generate_daily_report.py  grid_filters.py  import_cl_direct.py  import_historical_data.py  import_historical_to_postgres.py  integrate_champions_league.py  paper_trader.py  process_champions_league.py  process_historical_data.py  quick_eval.py  run_backtest.py  run_correct_backtest.py  run_final_optimization.py  run_monte_carlo.py  run_nightly_etl.sh  run_optimized_backtest.py  run_simple_backtest.py  show_cl_matches.py  test_advanced_features.py  test_apis.py  test_basic_features.py  test_complete_pipeline.py  test_data_loader.py  test_redis_cache.py  test_redis_simple.py  train_complete_dataset.py  train_ensemble.py  (+6 more)
src/backtesting/: backtester.py  stake_strategies.py
src/backtesting/domain/: backtester.py
src/data_collection/application/dtos/: api_schemas.py  historical_schemas.py
src/data_collection/infrastructure/apis/: football_data_client.py  odds_api_client.py
src/data_collection/infrastructure/cache/: redis_cache.py
src/execution/: betfair_connector.py
src/feature_engineering/: elo_calculator.py  form_calculator.py  h2h_calculator.py  pipeline.py  poisson_calculator.py
src/feature_engineering/application/: feature_pipeline.py
src/ml_models/infrastructure/: data_loader.py
src/models/: calibrator_manager.py  ensemble.py  two_stage_model.py
src/monitoring/: drift_detector.py
src/risk/: monte_carlo.py
src/shared/config/: settings.py
src/shared/database/: mongodb.py  postgres.py  redis.py
src/shared/exceptions/: custom_exceptions.py
src/shared/logging/: logger.py
tests/unit/: test_calibrator_manager.py  test_ensemble.py
(+6 files in other folders)
