[tool.poetry]
name = "sports-betting-predictor"
version = "0.1.0"
description = "Enterprise-grade sports betting intelligence platform with ML predictions"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# FastAPI and async
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# HTTP clients
httpx = "^0.26.0"
tenacity = "^8.2.3"
aiolimiter = "^1.1.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pymongo = "^4.6.1"
motor = "^3.3.2"

# Redis
redis = {extras = ["hiredis"], version = "^5.0.1"}

# Celery
celery = {extras = ["redis"], version = "^5.3.4"}
flower = "^2.0.1"

# ML and Data Science
scikit-learn = "^1.4.0"
xgboost = "^2.0.3"
lightgbm = "^4.2.0"
numpy = "^1.26.3"
pandas = "^2.1.4"
scipy = "^1.11.4"

# ML Ops
mlflow = "^2.9.2"
joblib = "^1.3.2"

# Monitoring and Logging
prometheus-client = "^0.19.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.2"}
structlog = "^24.1.0"

# Utilities
python-dotenv = "^1.0.0"
pytz = "^2023.3"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx-mock = "^0.11.0"

# Code quality
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
pylint = "^3.0.3"

# Type stubs
types-redis = "^4.6.0"
types-pytz = "^2023.3.1"

[tool.poetry.group.test.dependencies]
locust = "^2.20.0"
faker = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
